# devtools-ccsc

./: Cargo.toml  README.md
ls-ccsc/: Cargo.toml
ls-ccsc/src/: main.rs  mplab_project_config.rs  utils.rs
ls-ccsc/src/docs/: mod.rs  text_document.rs  text_document_source.rs  text_document_type.rs
ls-ccsc/src/input/: ccsc-example.c
ls-ccsc/src/server/: backend.rs  backend_data.rs  backend_inner.rs  ccsc_response.rs  diagnostic_result.rs  mod.rs  mplab_project_config.rs  text_document.rs  text_document_source.rs  text_document_type.rs
src/: lsp_ccs_c.rs  main.rs
src/input/: ccsc-example.c  ccsc-multiple-functions.c
src/server/: backend.rs  backend_data.rs  mod.rs  text_document.rs
tree-sitter-ccs-c/: .gitignore  binding.gyp  grammar.js  package.json  tree-sitter-ccsc.wasm
tree-sitter-ccs-c/bindings/rust/: lib.rs
tree-sitter-ccs-c/src/: grammar.json  parser.c
tree-sitter-ccsc/: .gitignore  Cargo.toml  grammar.js
tree-sitter-ccsc/src/: grammar.json
tree-sitter-ccsc/test/corpus/: hello_world.txt  (+2 more)
vscode-ccs-c/: CHANGELOG.md  README.md  package-lock.json  package.json
vscode-ccs-c/src/: extension.ts
vscode-ccs-c/testFixture/: ccsc-example.c  log4rs.yaml
vscode-ccsc/: package-lock.json  package.json
vscode-ccsc-provingground/: add-impl.err  main.STA  main.c  main.ccspjt  main.cof  main.err  main.hex  main.lst  main.osym  main.sym  main.tre  my_first_project_at_home.mcp  my_first_project_at_home.mcs  my_first_project_at_home.mcw
vscode-ccsc-provingground/sth/: add.c
vscode-ccsc/src/: extension.ts
vscode-ccsc/syntaxes/: ccsc.tmLanguage.json
(+3 files in other folders)
