[package]
name = "lsp-ccs-c"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.14.1"

tree-sitter-ccsc = { path = "tree-sitter-ccs-c" }
tree-sitter = "^0.20.0"

log4rs = "^1.0.0"
log = "^0.4.0"
