[package]
name = "ls-ccsc"
version = "0.2.0-alpha"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "^1.0"
tokio = { version = "^1", features = ["full"] }
tower-lsp = "~0.14.1"

tree-sitter-ccsc = { path = "../tree-sitter-ccsc" }
tree-sitter = "~0.20.0"
rust-ini = "~0.17"

regex = "^1.5.4"